#pragma once

#include <string>

class Snapshot
{
    public:
        virtual std::string getText() = 0;
};
